docs(readme): java 25 and the native name parser
- Java 21 -> 25 in the dependency list and the build section, with the two
  independent reasons it is a floor now
- a "the name parser is native" section: --enable-native-access on every JVM, and
  glibc-only base images, since the cdylib links against libc.so.6 and no musl
  build is published
- --enable-native-access=ALL-UNNAMED added to every java invocation in the examples
- document the NameType values behind the CSV `type` column, incl. the 5.0.0 rename
- fix three dead reference links: name-parser flattened away its name-parser-api/
  module directory at 5.0.0, and the TaxonomicStatus link was still the relative
  path from when this module lived inside the backend repo

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>